2007-08-15  Philip Van Hoof  <pvanhoof@gnome.org>

	* Moved the conic tests to a subdirectory

2007-08-15  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(conic_emit_status_idle), (conic_emit_status):
	If no mainloop is running (for instance, before gtk_main_run()), 
	just emit without using g_idle_add(). Hopefully this will cause the signal 
	to be emitted early enough - when tinymail needs is_online() to be correct. 
	See the comments to see why this is OK for tinymail.

2007-08-14  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(on_connection_event), (tny_maemo_conic_device_get_iap):
	Fixed a compiler warnings and a build fix when building for the device. 

2007-08-14  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(tny_maemo_conic_device_instance_init): Initialize is_online before 
	forcing the on_connection_event() signal handler to be called, not after,
	which could explain why is_online sometimes seems to be false at the start 
	when it should not be.

2007-08-14  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-camel/tny-camel-folder.c:
	(tny_camel_folder_transfer_msgs_default): Remove unused err variable 
	to fix a compiler warning.
	* libtinymail-maemo/tny-maemo-conic-device.c: Formatting/syntax 
	changes requested by Philip.

2007-08-14  Philip Van Hoof  <pvanhoof@gnome.org>

	* Recursively removing local directories
	* Smaller bugfixes and performance improvements
	* Enhanced error reporting in the async operations
	* Dealing with certain states (where priv->folder is uninitialized) in
	the async operations
	* Moving observer notifies away from transfer-msgs
	* Moved the io_lock a bit tighter for CamelStoreSummary

2007-08-14  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-camel/tny-camel-account-priv.h:
	* libtinymail-camel/tny-camel-account.c:
	(_tny_camel_account_refresh),
	(_tny_camel_account_start_camel_operation_n),